tests/generics/sum_type_nonexhaustive.diag
sum_type_nonexhaustive.ax:6:13: error: return type mismatch: expected 10, found 0
sum_type_nonexhaustive.ax:8:13: error: return type mismatch: expected 10, found 0
